syntax = "proto3";
option java_multiple_files = true;
package com.yangtian.matrix;

message Matrix {
  message Row {
    repeated int32 element = 1;
  }
  repeated Row row = 1;
}

message MatrixRequest {
  Matrix a = 1;
  Matrix b = 2;
}

message MatrixResponse {

  Matrix c = 1;
}

service MatrixService {
  rpc multiplyBlock(MatrixRequest) returns (MatrixResponse) {};
  rpc addBlock(MatrixRequest) returns (MatrixResponse) {};
}